FWF-4988:[Bugfix] - Updated classes for Header visibility issue

--- a/forms-flow-theme/scss/_card.scss
+++ b/forms-flow-theme/scss/_card.scss
@@ -87,6 +87,7 @@ $gray-darkest: var(--ff-gray-darkest);
   height: auto !important;
   border-radius: var(--radius-sm) !important;
   margin-bottom: var(--spacer-150);
+  margin-top: var(--spacer-150);
 
   .editor-header-text {
     color: var(--ff-white);
@@ -99,6 +100,18 @@ $gray-darkest: var(--ff-gray-darkest);
 .task-details-view{
   padding: var(--spacer-250) var(--spacer-150) var(--spacer-250) var(--spacer-150) !important;
 }
+
+.task-view-container-with-header {
+  max-height: calc(100vh - 8.25rem);
+  overflow-y: auto;
+}
+
+.task-view-container-with-custom-header {
+  height: auto;
+  max-height: calc(100vh - 13.25rem);
+  overflow-y: auto;
+}
+
 .white-text {
   color: var(--ff-white) !important;
 }
