--- a/forms-flow-theme/scss/_variables.scss
+++ b/forms-flow-theme/scss/_variables.scss
@@ -235,19 +235,27 @@ hr {
   max-height: 45vh;
   overflow-y: auto;
 }
+
 .scrollable-overview,
-.scrollable-overview-with-header {
+.scrollable-overview-with-header,
+.scrollable-overview-with-wizard,
+.scrollable-overview-with-custom-header-and-wizard {
   overflow-y: auto;
   padding-bottom: 5rem;
 }
 
-.scrollable-overview {
+.scrollable-overview {  
   max-height: 90vh;
 }
 
-.scrollable-overview-with-header {
-  max-height: calc(100vh - 10.25rem);
-} 
+.scrollable-overview-with-wizard {
+  max-height: calc(90vh - 5rem);
+}
+
+.scrollable-overview-with-custom-header-and-wizard {
+  max-height: calc(90vh - 7rem);
+}
+
 .disabled-mode{
  background: rgba(0, 0, 0, 0.1);
  cursor: not-allowed !important;
